<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/zzzz" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="610dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:onClick="batdau"
                    android:id="@+id/imageButton1"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/rsz_tedwork"
                    android:layout_marginStart="8dp" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/tenradio"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="122dp"
                    android:layout_height="35dp"
                    android:text="@string/worklife_with_adam_granth"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="136dp"
                    android:layout_height="37dp"
                    android:text="@string/ted_radio_hour"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="122dp"
                    android:layout_height="30dp"
                    android:text="@string/may_12_2020"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/friday"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/tedtalk"
                    android:layout_marginStart="8dp" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ten"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textVie5"
                    android:layout_width="122dp"
                    android:layout_height="25dp"
                    android:text="@string/ted_talk_daily"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="136dp"
                    android:layout_height="25dp"
                    android:text="@string/ted_en_espanol"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="122dp"
                    android:layout_height="30dp"
                    android:text="@string/_21_46"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/thursday"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/teninterview"
                    android:layout_marginStart="8dp" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/tedsincerely"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="122dp"
                    android:layout_height="25dp"
                    android:text="@string/the_ted_interview"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="136dp"
                    android:layout_height="25dp"
                    android:text="@string/sincerely_x_season_1"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="122dp"
                    android:layout_height="30dp"
                    android:text="@string/july_23_2020"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/apr_6_2020"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton

            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/talk_under" />

        <ImageButton

            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/discover_under" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/podcast_under" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/myted_under" />
    </LinearLayout>

</LinearLayout>